clusters/openshift/apps/home/project-nomad/flatnotes/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flatnotes
  namespace: project-nomad
  labels:
    external-dns: 'true'
  annotations:
    external-dns.alpha.kubernetes.io/target: gateway.apps.sno-ai-lab.vanillax.xyz
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: openshift-gateway
    namespace: openshift-ingress
    sectionName: https
  hostnames:
  - flatnotes.gateway.apps.sno-ai-lab.vanillax.xyz
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - group: ''
      kind: Service
      name: flatnotes
      port: 8080
      weight: 1
